--- a/view/index.html
+++ b/view/index.html
@@ -67,9 +67,30 @@
 			
 
 		</div>
+<!-----------------------------------EQUIPE------------------------------------>
+	<br> <br> <br>
+	<div id=designer_team>
+
+			<div class= "boxTeam">
+				<div class="titulo">
+					NOSSA EQUIPE
+				</div>
+				Nossa equipe é formada por estudantes do curso de Engenharia de Computação da Universidade Estadual de Feira de Santana que trabalham de forma voluntária com o objetivo de desenvolver projetos de qualidade e aprender como funciona o mercado empresarial.
+				<br>
+				<br>
+				<div>
+					<a href="/SiteEcompjr/view/equipe.html">
+						<button class="buttonTeam">Ver toda equipe</button>
+					</a>
+				</div>
+			</div>
+
+		
+		
+	</div>
 
 <!----------------------------PORTFOLIO----------------------------------------->
-		<div id="designer_portfolio">
+	<div id="designer_portfolio">
 			
 			<div class="titulo">
 				PORTFÓLIO
@@ -81,15 +102,19 @@
 			<div class="boxPortfolio">
 				SITES
 			</div>
-		<!--	
+			
 			<div class="container">
+				<img src="/SiteEcompjr/imag/a.jpg">
+				<img src="">
+				<img src="">
+				<img src="">
 			</div>
 
 			<div class="container">
 			</div>
 
 			<div class="container">
-			</div>-->
+			</div>
 
 			<div class="boxPortfolio">
 				SISTEMAS
