--- a/view/style.css
+++ b/view/style.css
@@ -93,7 +93,47 @@ h2{
 	height: 98px;
 	background: red;
 }
-	
+/*-----------------------------EQUIPE----------------------------------------------*/
+#designer_team{
+	top: 90px;
+	display: flex;
+	flex-direction: column;
+	position: static;
+	width:100%;
+	background: #FFFFFF;
+}
+
+.boxTeam{
+	padding: 10px;
+	align-self: flex-end;
+	position: static;
+	width: 460px;
+	height: 430px;
+	background: yellow;
+	padding: 10px;
+	align-items: center;
+	margin: 5px;
+
+    color: black;
+	font-family: Roboto;
+	font-size: 22px;
+	line-height: 41px;
+	text-align: center;
+}
+
+.buttonTeam{
+	align-self: center;
+    font-family: Roboto;
+    font-size: 22px;
+    font-weight: bold;
+    color:black;
+    width: 80%;
+    padding:10px;
+    border:none;
+    border-radius: 20px;
+    background: linear-gradient(to right,#00c4cc,#4682B4,#0174DF,#000080);
+    outline: none;
+}
 
 /*----------------------------CONTATO-----------------------------------------------*/
 
