--- a/view/index.html
+++ b/view/index.html
@@ -12,7 +12,7 @@
 <!----------------QUEM SOMOS ------------------------------->
 		<div id=designer_we_are>
 			
-			<div class="titulo">
+			<div class="titulo_we_are">
 				QUEM SOMOS
 			</div>
 
@@ -21,72 +21,69 @@
 				<br> 
 				<br>
 				Fundada em 2007, a EcompJr atualmente participa ativamente do propósito que envolve ser Movimento Empresa Júnior. A empresa promove uma vivência empresarial estratégica para estudantes interessados em liderar a mudança no atual cenário brasileiro.
-				<br>
-				<br>
-				<br>
 			</div>
 
 			<div class="container">
 
 				<div class=conteiner_mission>
 					<div>
-						<img src="/SiteEcompjr/imagens/designer/MISSOES.png">
+						<img src="MISSOES.png">
 					</div>
 					<div>
-						<h2>MISSÃO </h2>
+						<h2>MISSÃO</h2>
 					</div>
 					<div class=text>
-						Construir juntos um futuro inovador transformando estudantes em profissionais reconhecidos e aprender a vencer desafios através de oportunidades de impacto.
+						Construir juntos um futuro inovador transformando estudantes em <b>profissionais reconhecidos</b> e aprender a <b>vencer desafios</b> através de <b>oportunidades de impacto</b>.
 					</div>
 				</div>
 				
 				<div class=conteiner_vision>
 					<div>
-						<img src="/SiteEcompjr/imagens/designer/VISAO.png">
+						<img src="VISAO.png">
 					</div>
 					<div>
 						<h2>VISÃO</h2>
 					</div>
 					<div class=text>
-						Em 2020, denvolver lideres, comprometidos e capacitados que entregam resultados.
+						Em 2020, <b>denvolver lideres, comprometidos</b> e <b>capacitados</b> que entregam <b>resultados</b>.
 					</div>
 				</div>
 
 				<div class=conteiner_value>
 					<div>
-						<img src="/SiteEcompjr/imagens/designer/VALORES.png">
+						<img src="VALORES.png">
 					</div>
 					<div>
 						<h2>VALORES</h2>
 					</div>
 					<div class=text>
-						os valores de uma empresa guiam a conduta da mesma,portanto a EcompJr. baseia-se nos seguintes valores: Protagonismo, assiduidade, relisiênica, constância em resultados, evolução com os erros, conexão com movimento, ética e empatia. 
+						Os valores de uma empresa guiam a conduta da mesma,portanto a EcompJr. baseia-se nos seguintes valores: <b>Protagonismo, assiduidade, relisiênica, constância em resultados, evolução com os erros, conexão com movimento, ética e empatia</b>.
 					</div>
 				</div>	
 			</div>
-			
 
 		</div>
 <!-----------------------------------EQUIPE------------------------------------>
 	<br> <br> <br>
-	<div id=designer_team>
 
+	<div id=designer_team>
+		
 			<div class= "boxTeam">
 				<div class="titulo">
 					NOSSA EQUIPE
 				</div>
-				Nossa equipe é formada por estudantes do curso de Engenharia de Computação da Universidade Estadual de Feira de Santana que trabalham de forma voluntária com o objetivo de desenvolver projetos de qualidade e aprender como funciona o mercado empresarial.
-				<br>
-				<br>
-				<div>
-					<a href="/SiteEcompjr/view/equipe.html">
-						<button class="buttonTeam">Ver toda equipe</button>
-					</a>
-				</div>
-			</div>
+				<div class=teamText>
+					Nossa equipe é formada por estudantes do curso de Engenharia de Computação da Universidade Estadual de Feira de Santana que trabalham de forma voluntária com o objetivo de desenvolver projetos de qualidade e aprender como funciona o mercado empresarial.
+					<br>
+					<br>
+					<div>
+						<a href="/SiteEcompjr/view/equipe.html">
+							<button class="buttonTeam">CONHEÇA A EQUIPE</button>
+						</a>
+					</div>
 
-		
-		
+				</div>
+			</div>	
 	</div>
 
 <!----------------------------PORTFOLIO----------------------------------------->
@@ -98,49 +95,191 @@
 			<div class="description">
 				Estes são alguns dos projetos que já desenvolvemos:
 			</div>
-
+			<br>
+			<br>
 			<div class="boxPortfolio">
-				SITES
+				<div class="boxLetters">
+					SITES
+				</div>
+			</div>
+			<br>
+			<!--PRIMEIRA FILA IMAGEM-->
+			<div class="container_portfolio">
+
+				<div>
+					<img class="conteiner_img" src="ALFA.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Alfa JR</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="admjr.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">ADM JR</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="apas.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">APAS</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="life.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Life JR</button>
+						</a>
+					</div>
+				</div>
+
+			</div>
+			<br> <br>
+
+			<!--segunda FILA IMAGEM-->
+			<div class="container_portfolio">
+				<div>
+					<img class="conteiner_img" src="engetec.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Engetec JR</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="carvalho.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Carvalho Alves Advocacia</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="tecnoexpress.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Tecnoexpress</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="fbta.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio"> FBTA </button>
+						</a>
+					</div>
+				</div>
 			</div>
 			
-			<div class="container">
-				<img src="/SiteEcompjr/imag/a.jpg">
-				<img src="">
-				<img src="">
-				<img src="">
+			<br> <br>
+			<!--TERCEIRA FILA IMAGEM-->
+			<div class="container_portfolio">
+				<div>
+					<img class="conteiner_img" src="emartes.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Emartes</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="pollar.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Pollar Refrigeração</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="souza.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Super Souza</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="tripeco.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Tripeco</button>
+						</a>
+					</div>
+				</div>
 			</div>
 
-			<div class="container">
-			</div>
-
-			<div class="container">
-			</div>
-
+			
+			<br>
+			<br>
 			<div class="boxPortfolio">
-				SISTEMAS
+				<div class="boxLetters">
+					SISTEMAS
+				</div>
 			</div>
-		<!--	
-			<div class="container">
+			<br>
+			<div class="container_portfolio">
+				<div>
+					<img class="conteiner_img" src="colegiado.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Colegiado Engenharia Computação</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="plamol.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Plamol</button>
+						</a>
+					</div>
+				</div>
+
+				<div>
+					<img class="conteiner_img" src="resolucoesUefs.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">Resoluções UEFS</button>
+						</a>
+					</div>
+				</div>
 			</div>
-
-			<div class="container">
-			</div>
-
-			<div class="container">
-			</div>-->
-
+			<br>
+			<br>
 			<div class="boxPortfolio">
-				DESKTOP
+				<div class="boxLetters">
+					DESKTOP
+				</div>
 			</div>
-		<!--	
-			<div class="container">
+			<br>
+			<div class="container_portfolio">
+				<div>
+					<img class="conteiner_img" src="absman.png">
+					<div> 
+						<a href=>
+						<button class="buttonPortifolio">ABSAM</button>
+						</a>
+					</div>
+				</div>
 			</div>
-
-			<div class="container">
-			</div>
-
-			<div class="container">
-			</div>-->
+			
 
 		</div>
 
