--- a/view/style.css
+++ b/view/style.css
@@ -1,5 +1,15 @@
 
 /*-------------------------QUEM SOMOS---------------------------------------*/
+.titulo_we_are{
+	position: static;
+	top: 77px;
+	font-family: Roboto;
+	font-size: 40px;
+	line-height: 100px;
+	text-align: center;
+	color: white;
+}
+
 .titulo{
 	position: static;
 	top: 77px;
@@ -13,17 +23,20 @@
 #designer_we_are{
 	align-items: center;
 	display: flex;
+	border:none;
 	flex-direction: column;
-	position: relative;
+	position: flex;
 	width:100%;
+	background: #0174DF;
 }
 
 .container { 
-width: 950px;
-display: flex;
-flex-direction: row;
-align-items: center;
-justify-content: space-between;
+	width: 1000px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+	padding: 20px;
 }
 
 .description{
@@ -39,15 +52,15 @@ justify-content: space-between;
 
 h2{
     color: #0174DF;
-	top: 92px;
+	padding-top: 30px;
 	font-family: Roboto;
 	text-align: center;
 }
 
 .conteiner_value{
 	position: static;
-	width: 300px;
-	height: 250px;
+	width: 320px;
+	height: 260px;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
 	border-radius: 50px 0px;
@@ -58,8 +71,8 @@ h2{
 
 .conteiner_mission{
 	position: static;
-	width: 300px;
-	height: 250px;
+	width: 320px;
+	height: 260px;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
 	border-radius: 50px 0px;
@@ -68,8 +81,8 @@ h2{
 }
 .conteiner_vision{
 	position: static;
-	width: 300px;
-	height: 250px;
+	width: 320px;
+	height: 260px;
 	background: #FFFFFF;
 	box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
 	border-radius: 50px 0px;
@@ -78,20 +91,19 @@ h2{
 	align-self:flex-end;
 }
 #designer_we_are .text{
-	padding-right: 8px;
-   	padding-left: 8px;
-   	padding-top: 8px;
+	padding-right: 10px;
+	padding-left: 10px;
+	padding-bottom: 10px;
     color: black;
-	top: 92px;
 	font-family: Roboto;
 	font-size: 18px;
 	text-align: center;
 }
 #designer_we_are .container img{
- 	position: absolute;
-	width: 98px;
-	height: 98px;
-	background: red;
+	padding-left: 125px;
+	width: 50px;
+	height: 50px;
+	position: absolute;
 }
 /*-----------------------------EQUIPE----------------------------------------------*/
 #designer_team{
@@ -99,12 +111,12 @@ h2{
 	display: flex;
 	flex-direction: column;
 	position: static;
+	align-items: center;
 	width:100%;
 	background: #FFFFFF;
 }
 
 .boxTeam{
-	padding: 10px;
 	align-self: flex-end;
 	position: static;
 	width: 460px;
@@ -112,17 +124,17 @@ h2{
 	background: yellow;
 	padding: 10px;
 	align-items: center;
-	margin: 5px;
-
-    color: black;
+}
+.teamText{
+	padding: 20px;
+	color: black;
 	font-family: Roboto;
-	font-size: 22px;
-	line-height: 41px;
+	font-size: 20px;
+	line-height: 30px;
 	text-align: center;
 }
 
 .buttonTeam{
-	align-self: center;
     font-family: Roboto;
     font-size: 22px;
     font-weight: bold;
@@ -225,20 +237,48 @@ h2{
 	width:100%;
 }
 
-.boxPortfolio{
-	border-radius: 15px;
+.boxLetters{
 	background: linear-gradient(to right,#00c4cc,#4682B4,#0174DF,#000080);
+    border-radius: 15px;
+    width: 400px;
+    padding:6px;
     font-family: Roboto;
     font-size: 22px;
     font-weight: bold;
     color:black;
     text-align: center;
+}
+.boxPortfolio{
+	width:1000px;
+	align-items: flex-start;
+}
 
-    width: 400px;
-    padding:10px;
-    left: 157px;
-    margin: 10px;
-    align-self:flex-start;
+.container_portfolio{ 
+	width:1000px;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: space-between;
+}
+
+.conteiner_img{
+	position: static;
+	width: 230px;
+	height: 154px;
+	box-shadow: 0px 4px 4px rgba(0, 0, 0, 1);
+	border-radius: 50px 0px;
+}
+.buttonPortifolio{
+    font-family: Roboto;
+    font-size: 15px;
+    padding-bottom: 5px;
+    font-weight: bold;
+    color:black;
+    width: 230px;
+    border:none;
+    border-radius: 0px 0px 45px 45px;
+    background: linear-gradient(to right,#00c4cc,#4682B4,#0174DF,#000080);
+    outline: none;
 }
 
 	
