--- a/view/index.html
+++ b/view/index.html
@@ -314,32 +314,33 @@
 		<br>
 		<br>
 		<br>
-		<br>
-		<div class="container">
+		<div class="zoneBlack">
+			<div class="container">
 
-			<div class="conteiner_contate">
-				<h2>ENDEREÇO:</h2>
-				<div class=text>
-					UEFS - Avenida Transnordestina, s/nº - Módulo 5, MP 51A Novo Horizonte, Feira de Santana - BA, 44036-900
+				<div class="conteiner_contate">
+					<h2>ENDEREÇO:</h2>
+					<div class=text>
+						UEFS - Avenida Transnordestina, s/nº - Módulo 5, MP 51A <br>Novo Horizonte,<br> Feira de Santana - BA,<br>CEP: 44036-900
+					</div>
 				</div>
-			</div>
 
-			<div class="conteiner_contate">
-				<h2>WHATSAPP:</h2>
-				<div class=text>
-					(75) 98897-6806
+				<div class="conteiner_contate">
+					<h2>WHATSAPP:</h2>
+					<div class=text>
+						(75) 98897-6806
+					</div>
 				</div>
-			</div>
-			<div class="conteiner_contate">
-				<h2>EMAIL:</h2>
-				<div class=text>
-					ecompjr@uefs.br
+				<div class="conteiner_contate">
+					<h2>EMAIL:</h2>
+					<div class=text>
+						ecompjr@uefs.br
+					</div>
 				</div>
-			</div>
-			<div class="conteiner_contate">
-				<h2>HORÁRIOS:</h2>
-				<div class=text>
-					Segunda à Sexta - das 7:30 às 17:30
+				<div class="conteiner_contate">
+					<h2>HORÁRIOS:</h2>
+					<div class=text>
+						Segunda à Sexta - <br>das 7:30 às 17:30
+					</div>
 				</div>
 			</div>
 		</div>
