--- a/view/index.html
+++ b/view/index.html
@@ -5,6 +5,7 @@
 		<title>EcompJr</title>
 		<meta charset="utf-8">
 		<link rel="stylesheet" type="text/css" href="style.css" />
+		<link rel="shortcut icon" href="icon.png" type="image/x-png"/>
 	</head>
 
 
@@ -77,7 +78,7 @@
 					<br>
 					<br>
 					<div>
-						<a href="/SiteEcompjr/view/equipe.html">
+						<a href="equipe.html">
 							<button class="buttonTeam">CONHEÇA A EQUIPE</button>
 						</a>
 					</div>
@@ -109,7 +110,7 @@
 				<div>
 					<img class="conteiner_img" src="ALFA.png">
 					<div> 
-						<a href=>
+						<a href="https://www.google.com/search?q=tradutor&oq=tradutor&aqs=chrome.0.69i59l2j0j0i433l2j0l3.1997j0j7&sourceid=chrome&ie=UTF-8">
 						<button class="buttonPortifolio">Alfa JR</button>
 						</a>
 					</div>
@@ -237,7 +238,7 @@
 				<div>
 					<img class="conteiner_img" src="colegiado.png">
 					<div> 
-						<a href=>
+						<a href="http://www.ecomp.uefs.br/">
 						<button class="buttonPortifolio">Colegiado Engenharia Computação</button>
 						</a>
 					</div>
@@ -246,7 +247,7 @@
 				<div>
 					<img class="conteiner_img" src="plamol.png">
 					<div> 
-						<a href=>
+						<a href="http://www.ecompjr.com.br/portfolio/plamol-details.html">
 						<button class="buttonPortifolio">Plamol</button>
 						</a>
 					</div>
@@ -255,7 +256,7 @@
 				<div>
 					<img class="conteiner_img" src="resolucoesUefs.png">
 					<div> 
-						<a href=>
+						<a href="http://uefsresolve.ecompjr.com.br/">
 						<button class="buttonPortifolio">Resoluções UEFS</button>
 						</a>
 					</div>
@@ -273,7 +274,7 @@
 				<div>
 					<img class="conteiner_img" src="absman.png">
 					<div> 
-						<a href=>
+						<a href="https://absam.io/">
 						<button class="buttonPortifolio">ABSAM</button>
 						</a>
 					</div>
