--- a/view/index.html
+++ b/view/index.html
@@ -10,6 +10,12 @@
 
 
 	<body>
+
+<!-------------------CAPA----------------------------------------->
+
+<div id="designer_home">
+		 rapazes e pajdjjdjdjdjd
+</div>
 <!----------------QUEM SOMOS ------------------------------->
 		<div id=designer_we_are>
 			
