--- a/view/style.css
+++ b/view/style.css
@@ -1,3 +1,18 @@
+/*--------------------PAGINA SUPERIOR-----------------------------------------*/
+
+#designer_home{
+	align-items: center;
+	display: flex;
+	border:none;
+	flex-direction: column;
+	position: flex;
+	width:100%;
+	height:720px;
+	background: black;
+}
+
+
+
 
 /*-------------------------QUEM SOMOS---------------------------------------*/
 .titulo_we_are{
@@ -226,6 +241,16 @@ h2{
 	font-size: 18px;
 	text-align: center;
 }
+
+.zoneBlack{
+	align-items: center;
+	display: flex;
+	flex-direction: column;
+	position: relative;
+	width:100%;
+	height: 100%;
+	background: linear-gradient(to right,#00c4cc,#4682B4,#0174DF,#000080);
+}
 /* ------------------------portifolio----------------------------------------------*/
 #designer_portfolio{
 	align-items: center;
@@ -279,11 +304,3 @@ h2{
     cursor:pointer;
 }
 
-.zoneBlack{
-	align-items: center;
-	display: flex;
-	flex-direction: column;
-	position: relative;
-	width:100%;
-	background: black;
-}
