--- a/view/index.html
+++ b/view/index.html
@@ -14,9 +14,23 @@
 <!-------------------CAPA----------------------------------------->
 
 <div id="designer_home">
-		 rapazes e pajdjjdjdjdjd
+		<img class="configurationIcon" src="logoNome.png">
+		<div class="textIcon">
+			EMPRESA JÚNIOR DE ENGENHARIA DE COMPUTAÇÃO DA UEFS
+		</div>
+		<div class="textIdeia">
+			SUA IDEIA A UM PASSO<br> DA REALIDADE.
+		</div>
+		<div>
+			<a href="">
+				<button class="buttonHome">CONHEÇA-NOS</button>
+			</a>
+		</div>
+		<img class="imgIdeia" src="IDEIA.png">
 </div>
 <!----------------QUEM SOMOS ------------------------------->
+		<br>
+		<br>
 		<div id=designer_we_are>
 			
 			<div class="titulo_we_are">
