--- a/view/index.html
+++ b/view/index.html
@@ -130,7 +130,7 @@
 				<div>
 					<img class="conteiner_img" src="ALFA.png">
 					<div> 
-						<a href="https://www.google.com/search?q=tradutor&oq=tradutor&aqs=chrome.0.69i59l2j0j0i433l2j0l3.1997j0j7&sourceid=chrome&ie=UTF-8">
+						<a href="https://www.alfaconsultoriajuridicajr.com/">
 						<button class="buttonPortifolio">Alfa JR</button>
 						</a>
 					</div>
@@ -139,12 +139,12 @@
 				<div>
 					<img class="conteiner_img" src="admjr.png">
 					<div> 
-						<a href=>
+						<a href="https://www.admjr.com.br/">
 						<button class="buttonPortifolio">ADM JR</button>
 						</a>
 					</div>
 				</div>
-
+				<!--SITE INDISPONIVEL-->
 				<div>
 					<img class="conteiner_img" src="apas.png">
 					<div> 
@@ -157,7 +157,7 @@
 				<div>
 					<img class="conteiner_img" src="life.png">
 					<div> 
-						<a href=>
+						<a href="https://lifejr.org.br/">
 						<button class="buttonPortifolio">Life JR</button>
 						</a>
 					</div>
@@ -171,7 +171,7 @@
 				<div>
 					<img class="conteiner_img" src="engetec.png">
 					<div> 
-						<a href=>
+						<a href="https://engetecjr.com.br/">
 						<button class="buttonPortifolio">Engetec JR</button>
 						</a>
 					</div>
@@ -180,7 +180,7 @@
 				<div>
 					<img class="conteiner_img" src="carvalho.png">
 					<div> 
-						<a href=>
+						<a href="https://www.carvalhoalves.com.br/">
 						<button class="buttonPortifolio">Carvalho Alves Advocacia</button>
 						</a>
 					</div>
@@ -189,12 +189,12 @@
 				<div>
 					<img class="conteiner_img" src="tecnoexpress.png">
 					<div> 
-						<a href=>
+						<a href="http://www.tecnoexpress.com.br/">
 						<button class="buttonPortifolio">Tecnoexpress</button>
 						</a>
 					</div>
 				</div>
-
+				<!--SITE INDISPONIVEL-->
 				<div>
 					<img class="conteiner_img" src="fbta.png">
 					<div> 
@@ -209,6 +209,7 @@
 			<!--TERCEIRA FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
+					<!--SITE INDISPONIVEL-->
 					<img class="conteiner_img" src="emartes.png">
 					<div> 
 						<a href=>
@@ -220,13 +221,14 @@
 				<div>
 					<img class="conteiner_img" src="pollar.png">
 					<div> 
-						<a href=>
+						<a href="http://www.pollarrefrigeracao.com.br/">
 						<button class="buttonPortifolio">Pollar Refrigeração</button>
 						</a>
 					</div>
 				</div>
 
 				<div>
+					<!--SITE INDISPONIVEL-->
 					<img class="conteiner_img" src="souza.png">
 					<div> 
 						<a href=>
@@ -236,6 +238,7 @@
 				</div>
 
 				<div>
+					<!--SITE INDISPONIVEL-->
 					<img class="conteiner_img" src="tripeco.png">
 					<div> 
 						<a href=>
@@ -267,7 +270,8 @@
 				<div>
 					<img class="conteiner_img" src="plamol.png">
 					<div> 
-						<a href="http://www.ecompjr.com.br/portfolio/plamol-details.html">
+						<!--SITE INDISPONIVEL-->
+						<a href="">
 						<button class="buttonPortifolio">Plamol</button>
 						</a>
 					</div>
