--- a/view/index.html
+++ b/view/index.html
@@ -144,11 +144,10 @@
 						</a>
 					</div>
 				</div>
-				<!--SITE INDISPONIVEL-->
 				<div>
 					<img class="conteiner_img" src="apas.png">
 					<div> 
-						<a href=>
+						<a href="index.html">
 						<button class="buttonPortifolio">APAS</button>
 						</a>
 					</div>
@@ -194,11 +193,10 @@
 						</a>
 					</div>
 				</div>
-				<!--SITE INDISPONIVEL-->
 				<div>
 					<img class="conteiner_img" src="fbta.png">
 					<div> 
-						<a href=>
+						<a href="index.html">
 						<button class="buttonPortifolio"> FBTA </button>
 						</a>
 					</div>
@@ -209,10 +207,9 @@
 			<!--TERCEIRA FILA IMAGEM-->
 			<div class="container_portfolio">
 				<div>
-					<!--SITE INDISPONIVEL-->
 					<img class="conteiner_img" src="emartes.png">
 					<div> 
-						<a href=>
+						<a href="index.html">
 						<button class="buttonPortifolio">Emartes</button>
 						</a>
 					</div>
@@ -228,20 +225,18 @@
 				</div>
 
 				<div>
-					<!--SITE INDISPONIVEL-->
 					<img class="conteiner_img" src="souza.png">
 					<div> 
-						<a href=>
+						<a href="index.html">
 						<button class="buttonPortifolio">Super Souza</button>
 						</a>
 					</div>
 				</div>
 
 				<div>
-					<!--SITE INDISPONIVEL-->
 					<img class="conteiner_img" src="tripeco.png">
 					<div> 
-						<a href=>
+						<a href="index.html">
 						<button class="buttonPortifolio">Tripeco</button>
 						</a>
 					</div>
@@ -270,8 +265,7 @@
 				<div>
 					<img class="conteiner_img" src="plamol.png">
 					<div> 
-						<!--SITE INDISPONIVEL-->
-						<a href="">
+						<a href="index.html">
 						<button class="buttonPortifolio">Plamol</button>
 						</a>
 					</div>
