--- a/view/style.css
+++ b/view/style.css
@@ -9,6 +9,7 @@
 	width:100%;
 	height:615px;
 	background:#E5E5E5;
+	background-image: url("background.jpeg");
 	border-radius: 0px 0px 75px 75px;
 }
 
@@ -26,6 +27,8 @@
 	font-size: 18px;
 	text-align: center;
 	font-weight: bold;
+	color: white;
+	text-shadow: 0px 5px 5px rgba(0, 0, 0, 3);
 }
 .textIdeia{
 	position: absolute;
@@ -33,11 +36,12 @@
 	height: 91px;
 	left: 720px;
 	top: 435px;
-
 	font-family: Roboto;
 	font-weight: bold;
 	font-size:30px;
 	text-align: center;
+	color: white;
+	text-shadow: 0px 5px 5px rgba(0, 0, 0, 4);
 }
 .buttonHome{
 	position: absolute;
@@ -71,6 +75,7 @@
 	line-height: 100px;
 	text-align: center;
 	color: white;
+	text-shadow: 2px 5px 5px rgba(0, 0, 0, 3);
 }
 
 .titulo{
@@ -81,6 +86,7 @@
 	line-height: 100px;
 	text-align: center;
 	color: #0174DF;
+	text-shadow: 2px 3px 3px rgba(0, 0, 0, 3);
 }
 
 #designer_we_are{
